tests/snapshots/run_wpt_conformance__coreml_logicalAnd_uint8_broadcast_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
logical_and.https.any.js logicalAnd uint8 broadcast 0D to 4D, coreml
 Failed to dispatch graph: coreml runtime failed: input dtype mismatch: model expects 4-byte elements (code 65568), but input is Uint8 (1-byte); type conversion is not supported for this input

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: u8[];
    inputB: u8[2, 2, 2, 3];
  }

  nodes {
    [output] = logicalAnd(inputA, inputB, label="");
  }

  outputs { output; }
}
